...
    <string name="total_holes_label">총 홀 수</string>
    <string name="total_par_label">총 파</string>
    <string name="add_hole">＋ 홀 추가</string>
    <string name="save_confirm_title">저장 확인</string>
    <string name="save_confirm_helper">아래 내용으로 템플릿을 저장합니다</string>
    <string name="par_preview_label">홀 파 미리보기</string>
    <string name="save_done_title">저장 완료!</string>
    <string name="saved_info">%1$s의 %2$s이 저장되었습니다</string>
    <string name="new_template">새 템플릿 작성</string>
    <string name="start_with_this_course">이 코스로 게임 시작</string>
    <string name="to_course_list">목록으로</string>
    <string name="save_now">저장하기</string>
    <!-- Top bar & back confirmation -->
    <string name="back">뒤로</string>
    <string name="yes">네</string>
    <string name="no">아니오</string>
    <string name="confirm_cancel_create">코스 작성을 취소하시겠습니까?</string>
    <string name="confirm_cancel_edit">코스 편집을 취소하시겠습니까?</string>
    <string name="confirm_exit_game">현재 게임을 저장하지 않고 나가시겠습니까?</string>
    <!-- Non-home screen titles -->
    <string name="title_start">게임 시작</string>
    <string name="title_player_setup">경기 인원 구성</string>
    <string name="recent_venue_label">최근 사용한 구장</string>
...
