...
    android:layout_height="wrap_content"
    android:background="?attr/parkBackground"
    android:minHeight="64dp"
    android:paddingHorizontal="4dp">

    <LinearLayout
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/touch_min"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingHorizontal="8dp"
        android:background="?attr/selectableItemBackground"
...
